Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-11439] Function builders don't work with operator parameters #53840

Closed
hamishknight opened this issue Sep 9, 2019 · 1 comment
Closed
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself type checker Area → compiler: Semantic analysis

Comments

@hamishknight
Copy link
Collaborator

Previous ID SR-11439
Radar None
Original Reporter @hamishknight
Type Bug
Status Closed
Resolution Done
Environment

Swift version 5.1-dev (LLVM c5340df2d1, Swift 656fe89)
Target: x86_64-apple-darwin18.5.0

Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, TypeChecker
Assignee @hamishknight
Priority Medium

md5: b89e547d60aa7dbeb26ec2b4388cf60e

Issue Description:

The following fails to compile:

@_functionBuilder
struct TupleBuilder {
  static func buildBlock<T, U>(_ lhs: T, _ rhs: U) -> (T, U) { (lhs, rhs) }
}

infix operator ^^^
func ^^^ (lhs: Int, @TupleBuilder rhs: (Int) -> (String, Int)) -> (String, Int) {
  return rhs(lhs)
}

print(5 ^^^ {
  "hello"
  $0 + 1
})
main.swift:476:3: warning: string literal is unused
  "hello"
  ^~~~~~~
main.swift:477:6: warning: result of operator '+' is unused
  $0 + 1
  ~~ ^ ~
main.swift:478:1: error: missing return in a closure expected to return '(String, Int)'
})
^

However arguably it should be able to compile, just like an equivalent function call would:

func foo (_ lhs: Int, @TupleBuilder _ rhs: (Int) -> (String, Int)) -> (String, Int) {
  return rhs(lhs)
}

print(foo(5, {
  "hello"
  $0 + 1
}))
@hamishknight
Copy link
Collaborator Author

Fixed by #27102

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself type checker Area → compiler: Semantic analysis
Projects
None yet
Development

No branches or pull requests

1 participant